# aria2tui

./: .gitignore  CHANGELOG.md  README.md  TODO.md  aria2_detailing.py  aria2c_utils.py  aria2c_wrapper.py  aria2tui.py  aria2tui_keys.py  aria_adduri.py  clipboard_operations.py  config.toml  filtering.py  help_screen.py  input_field.py  keys.py  list_picker  list_picker.py  list_picker_colours.py  pytest.ini  requirements-test.txt  requirements.txt  searching.py  setup.cfg  setup.py  sorting.py  table_to_list_of_lists.py  todo.md  utils.py
.github/: FUNDING.yml
.github/workflows/: publish-to-pypi.yml
aria2tui/: aria2tui_app.py
aria2tui/graphing/: speed_graph.py  speed_graph_plain_text.py
aria2tui/lib/: aria2c_wrapper.py
aria2tui/test/: imports.py
aria2tui/ui/: aria2_detailing.py  aria2tui_menu_options.py
aria2tui/utils/: aria2c_utils.py
helper_files/: config.toml.example
src/aria2tui/: aria2tui_app.py
src/aria2tui/data/: config.toml
src/aria2tui/lib/: aria2c_wrapper.py
src/aria2tui/test/: imports.py
src/aria2tui/ui/: aria2_detailing.py  aria2tui_form.py  aria2tui_keys.py  aria2tui_menu_options.py
src/aria2tui/utils/: aria2c_utils.py  aria_adduri.py  display_info.py
src/aria2tui/utils/aria2c/: __init__.py  _lambdas.py  cli.py  core.py  downloads.py  files.py  format.py  macros.py  options.py  rpc.py
tests/: README.md  conftest.py
tests/e2e/: conftest.py  kitty_helper.py  test_download_options.py  test_smoke.py
tests/unit/: conftest.py  test_format_utils.py
