[metadata]
name = Aria2TUI
version = 0.1.5
author = Grim
author_email = grimandgreedy@protonmail.com
description = Aria2TUI: A TUI Frontend for the Aria2c Download Manager
; long_description = file: README.md, LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/grimandgreedy/Aria2TUI
project_urls =
    Bug Tracker = https://github.com/grimandgreedy/Aria2TUI/issues
    repository = https://github.com/grimandgreedy/Aria2TUI
classifiers =
    Programming Language :: Python :: 3
    ; License :: OSI Approved :: MIT License
    Operating System :: UNIX

[options]
package_dir =
    = aria2tui
; package_dir =
;     = src
packages = find:
python_requires = >=3.1

[options.packages.find]
; where = src
where = aria2tui
